# numerics-playground

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  bench.sh  bench_large.sh  bench_small.sh  error.v  large.txt  names.txt  pipeline.sh  run.sh  sample-many.sh  sample.sh  setup.sh  small.txt  test.sh  timeout.sh
paired/: dune-project  paired.opam  test.sh
paired/lib/: dune  fpcore.ml  fpcore.mli
paired/test/: dune
paired/tests/benchmarks/: delta4.paired  floudas1.fpcore  floudas1.paired  floudas1.parse  floudas2.fpcore  floudas2.parse  floudas3.paired  himmilbeau.fpcore  himmilbeau.paired  kepler0.fpcore  kepler1.parse  kepler2.parse  matrixDeterminant.paired  matrixDeterminant2.fpcore  matrixDeterminant2.paired  rigidBody1.paired  sineOrder3.paired  sineOrder3.parse  sqroot.parse  sum.fpcore  sum.paired  test01_sum3.parse
paired/tests/manual/: identity.paired
src/: abstest.sh  compute_bound.py  dune-project  numerics-playground.opam  run.sh  turnt.toml
src/lib/: dune  fpcore.ml  fpcore.mli
src/tests/benchmarks/: delta.absint  delta.fpcore  delta.paired  delta.parse  delta4.absint  delta4.parse  floudas2.paired  floudas3.fpcore  floudas3.parse  himmilbeau.absint  himmilbeau.parse  kepler0.absint  kepler0.paired  kepler0.parse  kepler1.absint  kepler1.fpcore  kepler1.paired  kepler2.absint  kepler2.paired  matrixDeterminant.parse  matrixDeterminant2.absint  matrixDeterminant2.parse  rigidBody1.absint  rigidBody1.parse  rigidBody2.absint  rigidBody2.fpcore  rigidBody2.paired  rigidBody2.parse  shoelace_formula.paired  shoelace_formula.parse  (+6 more)
(+426 files in other folders)
